<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteDetailsActivity"
    android:background="@color/purple_200"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_bar_layout">

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bad_script"
            android:text="@string/add_note"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/menu_btn"
            android:src="@drawable/baseline_done_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/white" />

</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar_layout"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginVertical="26dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_corner"
        android:id="@+id/note">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notes_title_text"
            android:hint="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notes_content_text"
            android:hint="@string/text"
            android:textSize="20sp"
            android:gravity="top"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:minLines="15"
            android:textColor="@color/black"/>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/trash_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/textView_delete_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/delete_btn"
            android:fontFamily="@font/ubuntu"
            android:text="Удалить заметку"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_delete_24"
            android:visibility="gone"/>

    </RelativeLayout>

</RelativeLayout>